--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="history">History</string>
     <string name="back">Back</string>
     <string name="ranges">Range</string>
+    <string name="set_range">Set Range</string>
+    <string name="get_range">Get Range</string>
 </resources>
