--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="connecting">Connecting...</string>
     <string name="connected">Connected</string>
     <string name="something_went_wrong">Something went wrong.</string>
+    <string name="r_cr_carriage_return">&#47;r- CR(Carriage Return)</string>
 </resources>
