--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="something_went_wrong">Something went wrong.</string>
     <string name="r_cr_carriage_return">&#47;r- CR(Carriage Return)</string>
     <string name="please_enter_range_value">Please enter range value.</string>
+    <string name="distance_value_in_meter">Distance value in meter</string>
 </resources>
