--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="sent">Sent</string>
     <string name="not_sent">Not Sent</string>
     <string name="not_connected">Not Connected</string>
+    <string name="get_dev_info">Get Dev info</string>
 </resources>
