--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,10 +66,7 @@
     <string name="turn_on_off_ble_device">Turn on/off BLE device</string>
     <string name="on">On</string>
     <string name="off">Off</string>
-    <string name="front_camera">Front Camera</string>
-    <string name="back_camera">Back Camera</string>
-    <string name="left_camera">Left Camera</string>
-    <string name="right_camera">Right Camera</string>
+    <string name="camera">Camera</string>
 
     <string name="turn_on_off_camera">Enable/Disable camera</string>
     <string name="enable">Enable</string>
@@ -78,4 +75,12 @@
     <string name="not_sent">Not Sent</string>
     <string name="not_connected">Not Connected</string>
     <string name="get_dev_info">Get Dev info</string>
+
+    <string name="please_select_camera_value">Please select camera type.</string>
+    <string name="front">Front</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
+    <string name="distance_value_in_cms">Distance value in cms</string>
+    <string name="default_log">Default Log</string>
+    <string name="set_default_log">Set Default Log</string>
 </resources>
