--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,6 @@
     <string name="set_default_log">Set Default Log</string>
     <string name="default_value">Default</string>
     <string name="device_id">Device ID</string>
+    <string name="tag_list">Tag List</string>
+    <string name="get_tag_list">Get tag list</string>
 </resources>
