Client Changes- Changed Blesig text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,8 @@
     <string name="already_paired">Already paired</string>
     <string name="back">Back</string>
     <string name="ranges">Range</string>
-    <string name="long_text">Card further\ndetection</string>
-    <string name="short_text">Card closer\ndetection</string>
+    <string name="long_text">Long Range</string>
+    <string name="short_text">Short Range</string>
     <string name="error">Error</string>
     <string name="information">Information</string>
     <string name="ok">OK</string>
@@ -31,7 +31,7 @@
     <string name="permission_missing_31">App needs Nearby devices permission to find and connect to devices via Bluetooth. You can turn it off when not in use.</string>
     <string name="turn_on_bluetooth">Turn on bluetooth</string>
     <string name="scan">Scan</string>
-    <string name="avaialbe_device_title">Available</string>
+    <string name="available_device_title">Available</string>
     <string name="bluetooth_is_off">Bluetooth is off</string>
     <string name="please_turn_on_bluetooth">Please turn on your phones bluetooth.</string>
     <string name="scan_and_connect"><![CDATA[Scan & Connect]]></string>
